# PlayPalace11

./: AGENTS.md  README.md  STATUS_JSON_FORMAT.md  flake.nix  gemini.md
server/: __main__.py  cli.py  config.example.toml  config.toml  main.py  pyproject.toml
server/core/: administration.py  server.py  virtual_bots.py
server/game_utils/: action_set_creation_mixin.py  duration_estimate_mixin.py  event_handling_mixin.py  game_result.py  game_result_mixin.py  lobby_actions_mixin.py  stats_helpers.py
server/games/: __init__.py  base.py
server/messages/: localization.py
server/network/: websocket_server.py
server/persistence/: database.py
server/plans/: game_development_guide.md  localization_and_messages.md
server/tables/: table.py
server/tests/: test_active_tables_menu.py  test_cli_bootstrap.py  test_config_paths.py  test_fivecarddraw.py  test_holdem.py  test_monopoly.py  test_monopoly_board_profile.py  test_monopoly_board_rules_registry.py  test_monopoly_board_selection.py  test_monopoly_city.py  test_monopoly_disney_marvel_manual_rule_payload.py  test_monopoly_junior_super_mario_manual.py  test_monopoly_manual_extraction_seed.py  test_monopoly_manual_rule_payload_completeness.py  test_monopoly_manual_rule_runtime_resolution.py  test_monopoly_mario_boards.py  test_monopoly_special_board_fallback_safety.py  test_monopoly_voice_banking.py  test_monopoly_wave3_rule_pack_modules.py  test_monopoly_wave_special_cards_disney_marvel_family.py  test_online_users.py  test_server_online_lists.py  test_server_startup_errors.py  test_sorry.py  test_sorry_play.py  (+3 more)
(+126 files in other folders)
