[project]
name = "playpalace-server"
version = "11.0.0"
description = "PlayPalace v11 Game Server"
readme = "plans/overview.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "mashumaro>=3.11",
    "fluent-compiler>=1.0",
    "babel>=2.14",
    "openskill>=6.1.3",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
playpalace-server = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".."]
filterwarnings = [
    # Fluent Compiler (AST deprecation in Py3.13)
    "ignore:.*arguments.__init__ got an unexpected keyword argument 'lineno'.*:DeprecationWarning",
    "ignore:.*arguments.__init__ got an unexpected keyword argument 'col_offset'.*:DeprecationWarning",
    "ignore:.*If.__init__ missing 1 required positional argument. 'test'.*:DeprecationWarning",
    "ignore:.*Module.__init__ got an unexpected keyword argument 'lineno'.*:DeprecationWarning",
    "ignore:.*Module.__init__ got an unexpected keyword argument 'col_offset'.*:DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
